[package]
name = "nova-sandbox"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

time = "0.2.16"
uuid = "0.8"
cgroups-fs = "1.1.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
