[package]
name = "nova-sandbox"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cgroups-fs = "1.1.2"
log = "0.4.8"
libmount = "0.1.15"
nix = "0.17.0"
pretty_env_logger = "0.4.0"
#time = "0.2.16"
uuid = { version = "0.8.1", features = ["v4"] }
wait-timeout = "0.2.0"
